src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/infinite/mutual-infinite-recursion.tessla
def x: Events[Int] := y
def y: Events[Int] := x